Add TypeScript and ReactJS support with Symfony Encore
- Configure TypeScript with ts-loader and strict type checking
- Enable JSX support for React components
- Add React, ReactDOM and prop-types dependencies
- Convert JavaScript files to TypeScript (.ts/.tsx)
- Create Counter React component example
- Update webpack.config.js with TypeScript and React presets
- Add tsconfig.json with React JSX configuration
- Update base.html.twig to include React component container

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -13,6 +13,11 @@
         {% endblock %}
     </head>
     <body>
-        {% block body %}{% endblock %}
+        {% block body %}
+        <div style="padding: 20px;">
+            <h1>Symfony + React Demo</h1>
+            <div id="react-counter"></div>
+        </div>
+        {% endblock %}
     </body>
 </html>
